src/test/resources/typeSystemTestModels/valid/expressions/PrimarySuper.java
package typeSystemTestModels.valid.expressions;

public class PrimarySuper extends SuperClass{
  int a = super.d;
}