src/test/resources/typeSystemTestModels/invalid/fieldsAndLocalVars/Third.java
package typeSystemTestModels.invalid.fieldsAndLocalVars;

import java.lang.String;

public class Third<T> extends Second<String> {

}